# andlock

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.githooks/: pre-commit
.github/: check-coverage.sh  license_header.rs
.github/prompts/: changelog-update.md  commit-builder.md  pr-builder.md
.github/workflows/: release-plz.yml  rust.yml
src/: canonicalizer.rs  cli.rs  counter.rs  dp.rs  grid.rs  json_format.rs  lib.rs  main.rs  mask.rs  memory.rs  output.rs  pipeline.rs  preview.rs  signal.rs  simplifier.rs  tty.rs
tests/: cli_smoke.rs  input_validation.rs  invariants.rs  json_roundtrip.rs  memory_limit.rs  oracles.rs  output_format.rs  stdin_pipes.rs
tests/common/: mod.rs
