[package]
name = "andlock"
version = "0.2.1"
edition = "2024"
description = "Rust tool to count Android unlock patterns on n-dimensional nodes"
authors = ["Juan Luis Leal Contreras <kuenlunleal@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
