[package]
name = "andlock"
version = "0.4.0"
edition = "2024"
description = "Rust tool to count Android unlock patterns on n-dimensional nodes"
authors = ["Juan Luis Leal Contreras <kuenlunleal@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
ctrlc = "3.5.2"
indicatif = "0.18.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = { version = "0.38.4", default-features = false, features = [
    "system",
] }

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
tempfile = "3.27.0"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
debug = false
